@@ -17,6 +17,11 @@
 Changes Since 0.6
 =================
 
+* docutils/io.py
+
+  - FileInput opens files as text files with universal newline support
+    (mode "rU", configurable with the new optional argument "mode").
+
 * docutils/writers/latex2e/__init__.py
 
   - Use `transforms.writer_aux.Admonitions` to "normalize" special
